syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message AvgRequest {
  int32 number = 1;
}

message AvgResponse {
  double result = 1;
}