syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 prime_factor = 1;
}